# Prompt-Optimization-Environment

./: .gitignore  Dockerfile  README.md  __init__.py  api.py  client.py  environment.py  evaluator.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  task_bank.py  validate_submission.py
data/: sample_tasks.json
server/: __init__.py  app.py  requirements.txt  rl3_environment.py
tests/: test_api.py  test_environment.py  test_evaluator.py  test_inference_contract.py
