[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-prompt-optimizer"
version = "0.2.0"
description = "Hackathon-ready OpenEnv RL environment for iterative prompt optimization."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=1.40.0",
    "openenv-core[core]>=0.2.3",
    "pydantic>=2.8.0",
    "requests>=2.32.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
]

[tool.setuptools]
include-package-data = true
packages = ["rl3", "rl3.server"]
package-dir = { "rl3" = ".", "rl3.server" = "server" }

